--- a/results.html
+++ b/results.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>Results - G1 Learning</title>
   <link rel="stylesheet" href="css/style.css">
-  <script type="module">
-    import { initTheme } from "./js/theme.js";
-    document.addEventListener("DOMContentLoaded", initTheme);
-  </script>
+  <script type="module" src="js/results.js" defer></script>
 </head>
 <body>
   <button id="theme-toggle" class="theme-toggle">🌓</button>
