fixed bugs and added unverif questions

--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
     <p>Question <span id="question-number"></span> of <span id="total-questions"></span></p>
     <h2 id="question-text"></h2>
     <div id="options-container"></div>
-    <p id="feedback" class="error"></p>
+    <p id="feedback" class="explanation"></p>
   </div>
 </body>
 </html>
