fixed bugs and visually appealing

--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
   <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
+  <a href="welcome.html" class="home-btn">🏠</a>
   <button id="theme-toggle" class="theme-toggle">🌓</button>
   <div class="container">
     <h1>Sign Up</h1>
