--- a/welcome.html
+++ b/welcome.html
@@ -7,13 +7,14 @@
   <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
+    <a href="welcome.html" class="home-btn">🏠</a>
   <button id="theme-toggle" class="theme-toggle">🌓</button>
   <div class="container">
     <h1>Welcome to G1 Prep!</h1>
     <p id="user-email"></p>
     <button onclick="window.location.href='quiz.html'">Start Quiz</button>
     <button onclick="window.location.href='leaderboard.html'">Leaderboard</button>
-    <button id="logout-btn">Log Out</button>
+    <button id="logout-btn" class="logout">Log Out</button>
   </div>
 </body>
 </html>
