--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <script type="module" src="js/auth.js" defer></script>
 </head>
 <body>
-  <button id="theme-toggle" class="theme-toggle">🌓</button>
-  <div class="container">
-    <h1>Login</h1>
-    <form id="login-form">
-      <input type="email" id="login-email" placeholder="Email" required>
-      <input type="password" id="login-password" placeholder="Password" required>
-      <button type="submit">Log In</button>
-    </form>
-    <p>Don’t have an account? <a href="signup.html" class="link">Sign Up</a></p>
-    <p id="login-error" class="error"></p>
-  </div>
+    <a href="welcome.html" class="home-btn">🏠</a>
+    <button id="theme-toggle" class="theme-toggle">🌓</button>
+    <div class="container">
+        <h1>Login</h1>
+        <form id="login-form">
+            <input type="email" id="login-email" placeholder="Email" required>
+            <input type="password" id="login-password" placeholder="Password" required>
+            <button type="submit">Log In</button>
+        </form>
+        <p>Don’t have an account? <a href="signup.html" class="link">Sign Up</a></p>
+        <p id="login-error" class="error"></p>
+    </div>
 </body>
 </html>
