--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,7 @@
   <script type="module" src="js/quiz.js" defer></script>
 </head>
 <body>
+    <a href="welcome.html" class="home-btn">🏠</a>
   <button id="theme-toggle" class="theme-toggle">🌓</button>
   <div class="container">
     <h1>Quiz</h1>
